<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".RepeatingAlarmActivity">

    <TextView
        android:id="@+id/tv_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/rubik_medium"
        android:text="Set"
        android:textColor="@color/text_gray"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_one_time_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_medium"
        android:text="Repeating Alarm"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@id/tv_set"
        app:layout_constraintTop_toBottomOf="@+id/tv_set" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/content_image_icon_one_time_alarm"
        android:src="@drawable/ic_repeating"
        app:layout_constraintBottom_toBottomOf="@+id/tv_one_time_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_set" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_margin="25dp"
        android:background="@drawable/bg_rounded_white"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_one_time_alarm">



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_time_one_time"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="@color/lightBlue"
            android:orientation="horizontal"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/tv_once_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/rubik_regular"
                android:maxLines="1"
                android:text="@string/tv_time"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn_set_time"
                android:layout_width="95dp"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tv_set_time"
                android:textSize="11sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/blueText"
                android:layout_gravity="end|center_vertical"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_time_one_time"
            android:text="Note"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_medium"
            android:id="@+id/tv_note_one_time"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Input Your Note"
            app:layout_constraintTop_toBottomOf="@+id/tv_note_one_time"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/rubik_regular"
            android:backgroundTint="#647aff"
            android:autofillHints="Your Alarm"
            android:inputType="text"
            android:textColor="@color/blueText"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik_medium"
            android:textSize="18sp"
            android:text="@string/tv_add_set_alarm"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/edt_note"
            android:background="@drawable/bg_rounded_blue"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik_medium"
            android:textSize="18sp"
            android:text="@string/tv_cancel"
            android:textColor="@color/blueText"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/btn_add"
            android:background="@drawable/bg_white_stroke"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>